--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -22,15 +22,15 @@
     <form class="form signup-form">
       <div class="form-group">
         <label for="name-signup">name:</label>
-        <input class="form-input" type="text" id="name-signup" />
+        <input class="form-input" type="text" id="name-signup" name="name"/>
       </div>
       <div class="form-group">
         <label for="email-signup">email:</label>
-        <input class="form-input" type="text" id="email-signup" />
+        <input class="form-input" type="text" id="email-signup" name="email"/>
       </div>
       <div class="form-group">
         <label for="password-signup">password:</label>
-        <input class="form-input" type="password" id="password-signup" />
+        <input class="form-input" type="password" id="password-signup" name="password"/>
       </div>
       <div class="form-group">
         <button class="btn btn-primary" type="submit">signup</button>
